# hermes-desktop-studio

./: .gitignore  PR_BODY.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/desktop-shell/: README.md
apps/desktop-studio/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop-studio/scripts/: browser-evidence.mjs
apps/desktop-studio/src/: App.tsx  vite-env.d.ts
apps/desktop-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-studio/tests/: api.spec.ts  flow.spec.ts  smoke.spec.ts
docs/: ADAPTER_CONTRACT.md  ADR-0001-desktop-first.md  APPROVAL_CENTER.md  ARCHITECTURE.md  BRANCH_POLICY.md  CONTEXT_INSPECTOR.md  DECISION_LOG.md  DESIGN_CANVAS.md  HERMES_MODEL_PROVIDER_VIEWER.md  HERMES_RUNTIME_COMPATIBILITY.md  INTAKE.md  MISSION_CONTROL.md  PRODUCT.md  PRODUCT_DIRECTION.md  QA_CHECKLIST.md  REAL_HERMES_SMOKE_TEST.md  REFERENCE_HERMES_DESKTOP.md  REMOTE_SSH_MODE.md  ROADMAP.md  RUNTIME_STATUS.md  RUN_CENTERED_WORKBENCH.md  STUDIO_ARTIFACTS.md  STUDIO_KANBAN.md  STUDIO_STORAGE.md  THEME_PACKS.md  THEME_SYSTEM.md  UI_DIRECTION.md  WORKFLOW.md  WORKSPACES.md
legacy/textual-prototype/: README.md
scripts/: capture_hermes_sse.py  dev.sh  run-ui.sh
themes/default-dark/: layout.toml  preview.txt  theme.toml
themes/example-lotr/: README.md  theme.toml
themes/example-minions/: README.md  theme.toml
themes/minecraft-overworld/: layout.toml  preview.txt  theme.toml
themes/minimal-light/: theme.toml
(+74 files in other folders)
